Added endpoint to get available support points (PCon 2026)
